--- a/config/configuration.yml
+++ b/config/configuration.yml
@@ -98,7 +98,7 @@ default:
   # Examples:
   # attachments_storage_path: /var/redmine/files
   # attachments_storage_path: D:/redmine/files
-  attachments_storage_path:
+  attachments_storage_path: <%= ATTACHMENTS_STORAGE_PATH %>
 
   # Configuration of the autologin cookie.
   # autologin_cookie_name: the name of the cookie (default: autologin)
